--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                         <span class="badge badge-complete">Completed</span>
                         <h3>Assignment 1</h3>
                         <p>Introduction to Information Management Systems</p>
-                        <a href="https://drive.google.com/drive/folders/1MauPH-Dk9ia04Dddz0aQDChNJE6kLzsB?usp=drive_link" class="btn" target="_blank">View Details</a>
+                        <a href=
                     </div>
                 </div>
                 
@@ -218,7 +218,7 @@
                         <span class="badge badge-complete">Completed</span>
                         <h3>Assignment 2</h3>
                         <p>Data Structures & Algorithms</p>
-                        <a href="https://drive.google.com/drive/folders/1MauPH-Dk9ia04Dddz0aQDChNJE6kLzsB?usp=drive_link" class="btn" target="_blank">View Details</a>
+                        <a href=
                     </div>
                 </div>
                 
